proyecto con sass v2

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
         </div>
     </header>
     <main>
-        <div>
+        <div>      
         <section class="titulo-pagina" style="background-image: url(./assets/img/fondo-inicio.jpg);">
-            <h1>Servicios</h1>
+            <h1>Rebus</h1>
         </section>
         <section >
             <div class="breadcrumb">
@@ -47,9 +47,15 @@
             </div>
         </section>
             <section class="contenedor">
-                <div class="contenido"> 
-                    <div>
-                        <h2>Ofrecemos diferentes servicios</h2>
+                <div class="contenido galeria-de-2"> 
+                    <div>  
+                        <h2>Sobre nuestra empresa</h2>
+                        <p>Yorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu
+                            turpis molestie, dictum est a, mattis tellus. Sed dignissim, metus
+                            nec fringilla accumsan, risus sem sollicitudin lacus, ut interdum
+                            tellus elit sed risus. Maecenas eget condimentum velit, sit amet 
+                        feugiat lectus. Class aptent taciti sociosqu ad litora torquent per
+                        </p>
                         <p>Yorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu
                             turpis molestie, dictum est a, mattis tellus. Sed dignissim, metus
                             nec fringilla accumsan, risus sem sollicitudin lacus, ut interdum
@@ -57,43 +63,68 @@
                         feugiat lectus. Class aptent taciti sociosqu ad litora torquent per
                         </p>
                     </div>
-                    <div class="galeria-de-3">
+                    <div class="galeria-de-2">
                         <div>
-                            <a href="#"><img src="./assets/img/hombre-trabajando.jpg" alt=""></a>
-                            <h3>Servicio X</h3>
+                            <img src="./assets/img/hombre-soldando.png" alt="">
                         </div>
                         <div>
-                            <a href="#"><img src="./assets/img/hombre-trabajando.jpg" alt=""></a>
-                            <h3>Servicio X</h3>
+                            <img src="./assets/img/hombre-soldando.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="contenedor"> 
+                <div class="contenido">
+                    <h2>¿Qué hacemos?</h2>
+                    <p>Yorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu
+                        turpis molestie, dictum est a, mattis tellus. Sed dignissim, metus
+                        nec fringilla accumsan, risus sem sollicitudin lacus, ut interdum
+                        tellus elit sed risus. Maecenas eget condimentum velit, sit amet 
+                    feugiat lectus. Class aptent taciti sociosqu ad litora torquent per
+                    </p>
+                    <p>Yorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu
+                        turpis molestie, dictum est a, mattis tellus. Sed dignissim, metus
+                        nec fringilla accumsan, risus sem sollicitudin lacus, ut interdum
+                        tellus elit sed risus. Maecenas eget condimentum velit, sit amet 
+                    feugiat lectus. Class aptent taciti sociosqu ad litora torquent per
+                    </p>
+                    <div class="galeria-de-3x1">
+                        <div>
+                            <img src="./assets/img/hombre-soldando.png" alt="">
                         </div>
                         <div>
-                            <a href="#"><img src="./assets/img/hombre-trabajando.jpg" alt=""></a>
-                            <h3>Servicio X</h3>
+                            <img src="./assets/img/hombre-soldando.png" alt="">
                         </div>
                         <div>
-                            <a href="#"><img src="./assets/img/hombre-trabajando.jpg" alt=""></a>
-                            <h3>Servicio X</h3>
+                            <img src="./assets/img/hombre-soldando.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </section>    
+            <section class="contenedor">
+                <div class="contenido">
+                    <h2>Nuestros Proyectos</h2>
+                    <div class="galeria-de-3x1">
+                        <div>
+                            <img src="./assets/img/hombre-soldando.png" alt="">
                         </div>
                         <div>
-                            <a href="#"><img src="./assets/img/hombre-trabajando.jpg" alt=""></a>
-                            <h3>Servicio X</h3>
+                            <img src="./assets/img/hombre-soldando.png" alt="">
                         </div>
                         <div>
-                            <a href="#"><img src="./assets/img/hombre-trabajando.jpg" alt=""></a>
-                            <h3>Servicio X</h3>
+                            <img src="./assets/img/hombre-soldando.png" alt="">
                         </div>
-                        <div>
-                            <a href="#"><img src="./assets/img/hombre-trabajando.jpg" alt=""></a>
-                            <h3>Servicio X</h3>
-                        </div>
-                        <div>
-                            <a href="#"><img src="./assets/img/hombre-trabajando.jpg" alt=""></a>
-                            <h3>Servicio X</h3>
-                        </div>
-                        <div>
-                            <a href="#"><img src="./assets/img/hombre-trabajando.jpg" alt=""></a>
-                            <h3>Servicio X</h3>
-                        </div>                  
+                    </div>
+                </div>
+            </section>
+            <section class="contenedor">
+                <h2>Nuestros Clientes</h2>
+                <div class="galeria-de-2">
+                    <div>
+                        <img src="./assets/img/hombre-soldando.png" alt="">
+                    </div>
+                    <div>
+                        <img src="./assets/img/hombre-soldando.png" alt="">
                     </div>
                 </div>
             </section>
