--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -54,7 +54,7 @@
         <section class="contenedor">
             <div class="cotenido">
                 <h2>Nuestros Proyectos</h2>
-                <div class="galeria-de-3">
+                <div class="galeria-de-3x3">
                     <div>
                         <a href="#"><img src="../assets/img/hombre-trabajando.jpg" alt=""></a>
                         <h3>Proyecto X</h3>
