--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -58,7 +58,7 @@
                         feugiat lectus. Class aptent taciti sociosqu ad litora torquent per
                         </p>
                     </div>
-                    <div class="galeria-de-3">
+                    <div class="galeria-de-3x3">
                         <div>
                             <a href="#"><img src="../assets/img/hombre-trabajando.jpg" alt=""></a>
                             <h3>Servicio X</h3>
