“trabajo-final-sass”

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
         </section>
             <section class="contenedor">
-                <div class="contenido galeria-de-2"> 
+                <div class="contenido"> 
                     <div>  
                         <h2>Sobre nuestra empresa</h2>
                         <p>Yorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu
@@ -73,7 +73,7 @@
                     </div>
                 </div>
             </section>
-            <section class="contenedor"> 
+            <section class="contenedor fondo-gris"> 
                 <div class="contenido">
                     <h2>¿Qué hacemos?</h2>
                     <p>Yorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu
@@ -101,8 +101,8 @@
                     </div>
                 </div>
             </section>    
-            <section class="contenedor">
-                <div class="contenido">
+            <section class="contenedor fondo-azul" >
+                <div class="contenido" >
                     <h2>Nuestros Proyectos</h2>
                     <div class="galeria-de-3x1">
                         <div>
@@ -118,13 +118,27 @@
                 </div>
             </section>
             <section class="contenedor">
-                <h2>Nuestros Clientes</h2>
-                <div class="galeria-de-2">
-                    <div>
-                        <img src="./assets/img/hombre-soldando.png" alt="">
-                    </div>
-                    <div>
-                        <img src="./assets/img/hombre-soldando.png" alt="">
+                <div class="contenido">
+                    <h2>Nuestros Clientes</h2>
+                    <div class="galeria-de-clientes">
+                        <div>
+                            <img src="./assets/img/clientes/logo-cliente.jpg" alt="">
+                        </div>
+                        <div>
+                            <img src="./assets/img/clientes/logo-cliente.jpg" alt="">
+                        </div>
+                        <div>
+                            <img src="./assets/img/clientes/logo-cliente.jpg" alt="">
+                        </div>
+                        <div>
+                            <img src="./assets/img/clientes/logo-cliente.jpg" alt="">
+                        </div>
+                        <div>
+                            <img src="./assets/img/clientes/logo-cliente.jpg" alt="">
+                        </div>
+                        <div>
+                            <img src="./assets/img/clientes/logo-cliente.jpg" alt="">
+                        </div>
                     </div>
                 </div>
             </section>
