--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -44,7 +44,7 @@
             <div class="breadcrumb">
                 <a href="../index.html">Inicio</a>
                 <span>/</span>
-                <a href="./nosotros.html">Nosotros</a>
+                <a href="./contacto.html">Contacto</a>
             </div>
         </section>
         <section class="contenedor">
