--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -64,7 +64,7 @@
                 </p>
             </div>
         </section>
-        <section style="background-color: #1A5F7A;" class="contenedor">
+        <section class="contenedor fondo-azul">
             <div class="contenido">
                 <div class="galeria-de-2">
                     <div>
@@ -73,6 +73,13 @@
                     <div>
                         <div style="color: white;">
                             <h2>Nuestro Propósito</h2>
+                            <p>Yorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu
+                                turpis molestie, dictum est a, mattis tellus. Sed dignissim, metus
+                                nec fringilla accumsan, risus sem sollicitudin lacus, ut interdum
+                                tellus elit sed risus. Maecenas eget condimentum velit, sit amet 
+                            feugiat lectus. Class aptent taciti sociosqu ad litora torquent per
+                            </p>
+                            <br>
                             <p>Yorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu
                                 turpis molestie, dictum est a, mattis tellus. Sed dignissim, metus
                                 nec fringilla accumsan, risus sem sollicitudin lacus, ut interdum
