--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -48,7 +48,7 @@
             <div class="breadcrumb">
                 <a href="../index.html">Inicio</a>
                 <span>/</span>
-                <a href="./nosotros.html">Nosotros</a>
+                <a href="./proyectos.html">Proyectos</a>
             </div>
         </section>
         <section class="contenedor">
