--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="REBUS SAS es una empresa que brinda servicios de consultaría en proyectos de arquitectura e ingeniería, planificación y desarrollo de obras civiles.">
+    <meta name="keywords" content="REBUS, ingeniería, servicios, proyectos">
     <title>REBUS</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
