--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Somos una empresa de ingeniería con más de 10 años de experiencia.">
+    <meta name="keywords" content="REBUS, empresa de ingeniería,empresa de ingenieria civil">
     <title>Nosotros</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
