--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Desarrollamos diversos proyectos por eso nuestra trayectoria nos avala.">
+    <meta name="keywords" content="proyectos de ingeniería,empresas de proyectos de ingeniería,proyectos de ingeniería ejemplos">
     <title>Proyectos</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
